Remove address and phone number

--- a/CV.html
+++ b/CV.html
@@ -172,7 +172,7 @@
 
       <div class="about-me">
         <h1>Luke Henkenius</h1>
-        <span class="bold-text">Writer | Programmer | Musician</span><br>
+        <span class="bold-text">Writer, programmer, and musician</span><br>
         <h2>About Me</h2>
         <p>
         I graduated with a degree in philosophy from Purdue in 2010, where I studied subjects including
@@ -185,8 +185,6 @@
 
       <div class="contact-info">
         <p> 
-        Fort Wayne, IN 46802<br>
-        (260) 530-7056<br>
         <a href = "mailto: henklt01@gmail.com" class="">henklt01@gmail.com</a><br>
         <a href="https://github.com/lux-sol/cv-website/blob/main/CV.html" class="button">Git</a>
         </p>
