Edit image, about me, and experience

--- a/CV.html
+++ b/CV.html
@@ -167,7 +167,7 @@
     <div class="flex-wrap">
       
       <div class="image-container">
-        <amp-img src="profile.png" alt="Welcome" width="150" height="200" class="image"></amp-img>
+        <amp-img src="profile.jpg" alt="Welcome" width="150" height="200" class="image"></amp-img>
       </div>
 
       <div class="about-me">
@@ -175,11 +175,10 @@
         <span class="bold-text">Writer, programmer, and musician</span><br>
         <h2>About Me</h2>
         <p>
-        I graduated with a degree in philosophy from Purdue in 2010, where I studied subjects including
-        mathematics, physics, and logic. My senior year, I completed a practicum in sustainability, for which I
+        I graduated with a degree in philosophy from Purdue in 2010, where I studied subjects ranging from religion and history to
+        mathematics, physics, and symbolic logic. My senior year, I completed a practicum in sustainability, for which I
         interviewed professionals in logistics and engineering about their work adapting new technologies to
-        environmentally-green standards. Currently, I work as a writer and web-designer. 
-        I am also interested in music and art.
+        environmentally-green standards. Currently, I work as a writer for Logical Position.
         <p>    
       </div>
 
@@ -199,25 +198,26 @@
         <h2>Work Experience</h2>
         <ul>
             <li>
+                <p>
+                <span class="bold-text">Content Writer</span><br>
+                Logical Position - Remote<br>
+                January 2023 to Present<br>
+                </p>
+
+                <p>Complete assigned writing projects according to client specifications and source images.</p>
+            </li>
+
+            <li>
             <p>
                 <span class="bold-text">Web Developer</span><br>
                 self-employed - Remote<br>
-                February 2021 to Present
+                February 2021 to April 2021
             </p>
 
             <p>Solo development of website web app frontend and backend.</p>
             </li>
 
-            <li>
-                <p>
-                <span class="bold-text">Technical Writer</span><br>
-                self-employed - Remote<br>
-                May 2010 to Present<br>
-                </p>
-
-                <p>Complete technical writing projects according to client specifications.</p>
-            </li>
-
+            
             <li>
             <p>
                 <span class="bold-text">Code Mentor</span><br>
@@ -225,10 +225,9 @@
                 September 2020 to March 2021
             </p>
 
-            <p>Mentor school age children in fundamentals of programming.</p>
+            <p>Mentored school age children in fundamentals of programming.</p>
             </li>
 
-            <li>
             <p>
                 <span class="bold-text">Web Search Evaluator</span><br>
                 Appen<br>
@@ -236,7 +235,7 @@
                 United States
             </p>
 
-            <p>Working independently in web content analysis while adhering to technical standards.</p>
+            <p>Worked independently in web content analysis while adhering to technical standards.</p>
             </li>
 
             <li>
@@ -312,14 +311,12 @@
             <li>Python</li>
             <li>Django</li>
             <li>MySQL</li>
-            <li>AMP!</li>
           </ul>
         </div>
 
         <div class="organizations"</div>
             <h2>Organizations</h2>
             <ul>
-            <li>Purdue Alumni</li>
             <li>Remnant Trust</li>
             <li>Acres Land Trust</li>
             <li>Department of Natural Resources (DNR)</li>
